# lab-05-stack

./: .gitignore  CMakeLists.txt  README.md
include/: header.hpp
sources/: source.cpp
tests/: test.cpp
